--- a/login.html
+++ b/login.html
@@ -186,72 +186,68 @@
     </div>
 
 </div>
-<link rel="stylesheet" href="cdn/bootstrap/bootstrap.min.css"/>
-<link href="cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<script src="cdn/vue/vue.min.js"></script>
-<script src="cdn/axios.min.js"></script>
 <script src="cdn/common.js"></script>
 <script>
+    initApp().then(() => {
+        const storage_login = "login-state";
+        new Vue({
+            el: "#root",
+            data() {
+                return {username: "", password: "", loginErr: false, loginErrMsg: ""}
+            },
+            methods: {
 
-    const storage_login = "login-state";
-    new Vue({
-        el: "#root",
-        data() {
-            return {username: "", password: "", loginErr: false, loginErrMsg: ""}
-        },
-        methods: {
+                oauth() {
+                    if (this.username.trim() === "" || this.password.trim() === "") {
+                        return false;
+                    }
 
-            oauth() {
-                if (this.username.trim() === "" || this.password.trim() === "") {
+                    axios.post('https://gitee.com/oauth/token', {
+                        grant_type: "password",
+                        username: this.username,
+                        password: this.password,
+                        client_id: common.config.client_id,
+                        client_secret: common.config.client_secret,
+                        scope: "projects",
+                    }).then(response => {
+                        if (response.status === 200) {
+                            localStorage.setItem(storage_login, JSON.stringify(response.data));
+                            this.navPage();
+                        }
+                    }).catch((err) => {
+                        this.loginErrMsg = err;
+                        this.loginErr = true;
+                    });
+
                     return false;
-                }
+                },
 
-                axios.post('https://gitee.com/oauth/token', {
-                    grant_type: "password",
-                    username: this.username,
-                    password: this.password,
-                    client_id: common.config.client_id,
-                    client_secret: common.config.client_secret,
-                    scope: "projects",
-                }).then(response => {
-                    if (response.status === 200) {
-                        localStorage.setItem(storage_login, JSON.stringify(response.data));
-                        this.navPage();
+                loginValid() {
+                    let loginStorageData = localStorage.getItem(storage_login);
+                    if (loginStorageData) {
+                        let {created_at, expires_in, refresh_token} = JSON.parse(loginStorageData);
+                        if (Math.floor(Date.now() / 1000) - created_at > expires_in) {
+                            axios.post(`https://gitee.com/oauth/token?grant_type=refresh_token&refresh_token=${refresh_token}`).then(response => {
+                                if (response.status === 200) {
+                                    localStorage.setItem(storage_login, JSON.stringify(response.data));
+                                    this.navPage();
+                                }
+                            });
+                        } else {
+                            this.navPage();
+                        }
                     }
-                }).catch((err) => {
-                    this.loginErrMsg = err;
-                    this.loginErr = true;
-                });
+                },
 
-                return false;
-            },
-
-            loginValid() {
-                let loginStorageData = localStorage.getItem(storage_login);
-                if (loginStorageData) {
-                    let {created_at, expires_in, refresh_token} = JSON.parse(loginStorageData);
-                    if (Math.floor(Date.now() / 1000) - created_at > expires_in) {
-                        axios.post(`https://gitee.com/oauth/token?grant_type=refresh_token&refresh_token=${refresh_token}`).then(response => {
-                            if (response.status === 200) {
-                                localStorage.setItem(storage_login, JSON.stringify(response.data));
-                                this.navPage();
-                            }
-                        });
-                    } else {
-                        this.navPage();
-                    }
+                navPage() {
+                    window.location.href = "/index.html";
                 }
             },
-
-            navPage() {
-                window.location.href = "/index.html";
+            mounted() {
+                this.loginValid();
             }
-        },
-        mounted() {
-            this.loginValid();
-        }
+        })
     })
-
 </script>
 </body>
 </html>
