--- a/nav.html
+++ b/nav.html
@@ -22,7 +22,9 @@
 <body>
 
 <div id="root" class="container-fluid overflow-hidden" style="padding: 0">
-    <nav class="navbar navbar-dark bg-dark">
+
+    <yanhui-header title="Bookmarks"></yanhui-header>
+    <!--<nav class="navbar navbar-dark bg-dark">
         <div class="align-items-center">
             <i class="fa fa-2x fa-chrome text-light link mr-2 title-align-sub"></i>
             <a class="navbar-brand" href="#">
@@ -36,7 +38,7 @@
             <i class="fa fa-2x fa-sign-out text-light link ml-3" @click="logout"></i>
 
         </div>
-    </nav>
+    </nav>-->
 
     <div class="mx-2 mt-3" style="overflow: hidden">
 
@@ -89,145 +91,145 @@
 
 </div>
 
-<script src="cdn/vue/vue.min.js"></script>
-<script src="cdn/axios.min.js"></script>
-<link rel="stylesheet" href="/cdn/bootstrap/bootstrap.min.css"/>
-<link href="cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<script src="cdn/common.js"></script>
+<script src="/cdn/common.js"></script>
 <script>
 
-    let bmTypeList = [];//分类集合
-    let bmTagList = [];//标签集合  分类下的多级子分类
-    let bmList = [];
+    initApp().then(() => {
 
-    function recursionBookmark(bm, type, tag) {
-        if (bm.a) { // 子分类文件夹
-            for (let cbm of bm.a) {
-                if (cbm.a) {
-                    bmTagList.push({name: cbm.b, type});
-                    recursionBookmark(cbm, type, cbm.b);
-                } else {
-                    recursionBookmark(cbm, type, tag);
-                }
-            }
-        } else if (bm.c) {//书签
-            type && (bm.type = type);
-            tag && (bm.tag = tag);
-            bmList.push(bm);
-        }
-    }
+        let bmTypeList = [];//分类集合
+        let bmTagList = [];//标签集合  分类下的多级子分类
+        let bmList = [];
 
-    new Vue({
-        el: "#root",
-        data() {
-            return {
-                bmTypeList: [],
-                bmTagList: [],
-                bmList: [],
-                checkedType: "",
-                checkedTag: "",
-                searchTxt: "",
-                loading: false,
-                innerLinks: [
-                    {name: "CDN", url: "/cdn"},
-                    {name: "Monaco Editor", url: "/pages/fileEditor.html"},
-                    {name: "Markdown Editor", url: "/pages/mdEditor.html"},
-                    {name: "JsonView", url: "/pages/jsonView.html"},
-                ]
-            }
-        },
-        watch: {
-            checkedType(val) {
-                this.checkedTag = "";
-                this.bmTagList = bmTagList.filter(n => n.type === val);
-                this.bmList = bmList.filter(n => n.type === val);
-            }
-        },
-        methods: {
-            logout() {
-                let result = confirm("确认登出？");
-                if (result) {
-                    localStorage.clear();
-                    window.location.href = "/login.html"
-                }
-            },
-            search() {
-                this.bmList = bmList.filter(
-                    n => n.b.toUpperCase().indexOf(this.searchTxt.toUpperCase()) !== -1 ||
-                        n.c.toUpperCase().indexOf(this.searchTxt.toUpperCase()) !== -1
-                );
-                this.checkedTag = "";
-                this.searchTxt = "";
-            },
-            typeClick(type) {
-                this.bmList = bmList.filter(n => n.type === type);
-            },
-            tagClick(tag) {
-                let checkedTag = tag.name;
-                if (tag.name === this.checkedTag) {
-                    this.checkedTag = "";
-                    checkedTag = "";
-                }
-
-                if (checkedTag === "") {
-                    this.bmList = bmList.filter(n => n.type === this.checkedType);
-                    return;
-                }
-
-                this.bmList = bmList.filter(bm => {
-                    if (!bm.tag) {
-                        return false;
-                    }
-                    return bm.tag === checkedTag;
-                });
-            },
-            refreshData() {
-                let result = confirm("确认重新下载书签数据？");
-                if (result) {
-                    this.loading = true;
-                    this.checkedType = "";
-                    this.checkedTag = "";
-                    bmList = [];
-                    bmTypeList = [];
-                    bmTagList = [];
-                    this.bmTypeList = [];
-                    this.bmTagList = [];
-                    this.bmList = [];
-                    this.loadData(true);
-                    setTimeout(() => {
-                        this.loading = false;
-                    }, 3000)
-                }
-                return false;
-            },
-            loadData(refreshCache) {
-                common.getContent("json/chrome.bookmark.json", refreshCache).then(data => {
-                    this.bmDataHandle(data);
-                });
-            },
-            bmDataHandle(bmJsonData) {
-                let bmRoot = JSON.parse(bmJsonData);
-                // 书签栏书签集合 a = children b=title c=url
-                let rootBmList = bmRoot.a;
-                for (let bm of rootBmList) {
-                    // 如果有子节点  则代表分类
-                    if (bm.a) {
-                        recursionBookmark(bm, bm.b, null);
-                        bmTypeList.push(bm.b);
+        function recursionBookmark(bm, type, tag) {
+            if (bm.a) { // 子分类文件夹
+                for (let cbm of bm.a) {
+                    if (cbm.a) {
+                        bmTagList.push({name: cbm.b, type});
+                        recursionBookmark(cbm, type, cbm.b);
                     } else {
-                        recursionBookmark(bm, null, null);
+                        recursionBookmark(cbm, type, tag);
                     }
                 }
-                this.checkedType = bmTypeList[0];
-                this.bmTypeList = bmTypeList;
-                this.bmTagList = bmTagList;
-                this.bmList = bmList;
-                this.loading = false;
+            } else if (bm.c) {//书签
+                type && (bm.type = type);
+                tag && (bm.tag = tag);
+                bmList.push(bm);
             }
-        },
-        mounted() {
-            this.loadData();
         }
+
+        new Vue({
+            el: "#root",
+            data() {
+                return {
+                    bmTypeList: [],
+                    bmTagList: [],
+                    bmList: [],
+                    checkedType: "",
+                    checkedTag: "",
+                    searchTxt: "",
+                    loading: false,
+                    innerLinks: [
+                        {name: "CDN", url: "/cdn"},
+                        {name: "Monaco Editor", url: "/pages/fileEditor.html"},
+                        {name: "Markdown Editor", url: "/pages/mdEditor.html"},
+                        {name: "JsonView", url: "/pages/jsonView.html"},
+                    ]
+                }
+            },
+            watch: {
+                checkedType(val) {
+                    this.checkedTag = "";
+                    this.bmTagList = bmTagList.filter(n => n.type === val);
+                    this.bmList = bmList.filter(n => n.type === val);
+                }
+            },
+            methods: {
+                logout() {
+                    let result = confirm("确认登出？");
+                    if (result) {
+                        localStorage.clear();
+                        window.location.href = "/login.html"
+                    }
+                },
+                search() {
+                    this.bmList = bmList.filter(
+                        n => n.b.toUpperCase().indexOf(this.searchTxt.toUpperCase()) !== -1 ||
+                            n.c.toUpperCase().indexOf(this.searchTxt.toUpperCase()) !== -1
+                    );
+                    this.checkedTag = "";
+                    this.searchTxt = "";
+                },
+                typeClick(type) {
+                    this.bmList = bmList.filter(n => n.type === type);
+                },
+                tagClick(tag) {
+                    let checkedTag = tag.name;
+                    if (tag.name === this.checkedTag) {
+                        this.checkedTag = "";
+                        checkedTag = "";
+                    }
+
+                    if (checkedTag === "") {
+                        this.bmList = bmList.filter(n => n.type === this.checkedType);
+                        return;
+                    }
+
+                    this.bmList = bmList.filter(bm => {
+                        if (!bm.tag) {
+                            return false;
+                        }
+                        return bm.tag === checkedTag;
+                    });
+                },
+                refreshData() {
+                    let result = confirm("确认重新下载书签数据？");
+                    if (result) {
+                        this.loading = true;
+                        this.checkedType = "";
+                        this.checkedTag = "";
+                        bmList = [];
+                        bmTypeList = [];
+                        bmTagList = [];
+                        this.bmTypeList = [];
+                        this.bmTagList = [];
+                        this.bmList = [];
+                        this.loadData(true);
+                        setTimeout(() => {
+                            this.loading = false;
+                        }, 3000)
+                    }
+                    return false;
+                },
+                loadData(refreshCache) {
+                    common.getContent("json/chrome.bookmark.json", refreshCache).then(data => {
+                        this.bmDataHandle(data);
+                    });
+                },
+                bmDataHandle(bmJsonData) {
+                    let bmRoot = JSON.parse(bmJsonData);
+                    // 书签栏书签集合 a = children b=title c=url
+                    let rootBmList = bmRoot.a;
+                    for (let bm of rootBmList) {
+                        // 如果有子节点  则代表分类
+                        if (bm.a) {
+                            recursionBookmark(bm, bm.b, null);
+                            bmTypeList.push(bm.b);
+                        } else {
+                            recursionBookmark(bm, null, null);
+                        }
+                    }
+                    this.checkedType = bmTypeList[0];
+                    this.bmTypeList = bmTypeList;
+                    this.bmTagList = bmTagList;
+                    this.bmList = bmList;
+                    this.loading = false;
+                }
+            },
+            mounted() {
+                this.loadData();
+            }
+        });
+
     })
 
 </script>
