--- a/pages/fileEditor.html
+++ b/pages/fileEditor.html
@@ -3,7 +3,6 @@
 <head>
     <title>Monaco-Editor</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/jpeg" sizes="80x80" href="../imgs/logo.jpg"/>
     <style type="text/css">
         body {
@@ -16,6 +15,7 @@
 <body>
 <div id="container" style="width: 100%; height: 100vh;"></div>
 <div id="root">
+    <yanhui-header></yanhui-header>
     <div class="alert alert-secondary d-flex justify-content-start align-items-center fixed-bottom m-2 p-2"
          role="alert">
         <span class="font-weight-bold border border-info rounded p-1" style="border-width: 2px!important">Monaco-Editor编辑器</span>
@@ -62,153 +62,152 @@
     </div>
 
 </div>
-<script src="../cdn/vue/vue.min.js"></script>
-<script src="../cdn/axios.min.js"></script>
 <script src="../cdn/common.js"></script>
-<script src="../cdn/monaco-editor/min/vs/loader.js"></script>
-
-<link rel="stylesheet" href="/cdn/bootstrap/bootstrap.min.css"/>
-
 <script>
 
-    let editor;
-    require.config({paths: {vs: '../cdn/monaco-editor/min/vs'}});
-    let themeIsDark = true;
-    let tip = common.tip;
+    initApp({
+        baseLibs: ["/cdn/monaco-editor/min/vs/loader.js"],
+        asyncLibs: [],
+    }).then(() => {
+        let editor;
+        require.config({paths: {vs: '../cdn/monaco-editor/min/vs'}});
+        let themeIsDark = true;
+        let tip = common.tip;
 
-    let app = new Vue({
-        el: "#root",
-        data() {
-            return {
-                selectedFile: "",
-                fileList: [],
-                inputTxt: "",
-                editor: null,
-                showIframe: false,
-                renderFileContent: "<h2>Hello</h2>"
-            }
-        },
-        methods: {
-            initFileList(data) {
-                this.fileList = [];
-                for (let key in data) {
-                    this.fileList.push(key);
+        let app = new Vue({
+            el: "#root",
+            data() {
+                return {
+                    selectedFile: "",
+                    fileList: [],
+                    inputTxt: "",
+                    editor: null,
+                    showIframe: false,
+                    renderFileContent: "<h2>Hello</h2>"
                 }
             },
-            loadFile(sync = false) {
-                if (this.fileList.indexOf(this.inputTxt) === -1) {
-                    alert(`文件不存在 ${this.inputTxt}`);
-                    return;
-                }
-                this.selectedFile = this.inputTxt;
-                common.getContent(this.selectedFile, sync).then(data => {
-                    let suffix = this.selectedFile.substr(this.selectedFile.lastIndexOf(".") + 1);
-                    switch (suffix) {
-                        case "md":
-                            suffix = "markdown";
-                            break;
-                        default:
-                            break;
+            methods: {
+                initFileList(data) {
+                    this.fileList = [];
+                    for (let key in data) {
+                        this.fileList.push(key);
                     }
-                    monaco.editor.setModelLanguage(editor.getModel(), suffix);
-                    editor.setValue(data);
-                    if (sync) tip("文件加载完成!", `已重新加载文件 => ${this.selectedFile}`);
-                });
-            },
-            update() {
-                if (this.selectedFile === "") {
-                    tip("请选择编辑文件");
-                    return;
+                },
+                loadFile(sync = false) {
+                    if (this.fileList.indexOf(this.inputTxt) === -1) {
+                        alert(`文件不存在 ${this.inputTxt}`);
+                        return;
+                    }
+                    this.selectedFile = this.inputTxt;
+                    common.getContent(this.selectedFile, sync).then(data => {
+                        let suffix = this.selectedFile.substr(this.selectedFile.lastIndexOf(".") + 1);
+                        switch (suffix) {
+                            case "md":
+                                suffix = "markdown";
+                                break;
+                            default:
+                                break;
+                        }
+                        monaco.editor.setModelLanguage(editor.getModel(), suffix);
+                        editor.setValue(data);
+                        if (sync) tip("文件加载完成!", `已重新加载文件 => ${this.selectedFile}`);
+                    });
+                },
+                update() {
+                    if (this.selectedFile === "") {
+                        tip("请选择编辑文件");
+                        return;
+                    }
+                    let value = editor.getValue();
+                    common.updateFile(this.selectedFile, value);
+                },
+                closeIframe() {
+                    this.showIframe = false;
                 }
-                let value = editor.getValue();
-                common.updateFile(this.selectedFile, value);
             },
-            closeIframe() {
-                this.showIframe = false;
+            mounted() {
+                this.initFileList(common.fileTree);
+                initEditor();
             }
-        },
-        mounted() {
-            this.initFileList(common.fileTree);
-            initEditor();
+        });
+
+        function actionInit() {
+
+            let actions = [
+                {
+                    name: "在iframe中预览",
+                    keys: [monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_P],
+                    group: "yh-util",
+                    call: () => {
+                        let value = editor.getValue();
+                        app.renderFileContent = value;
+                        app.showIframe = true;
+                    },
+                },
+                {
+                    name: "js eval", group: "yh-util", call: () => {
+                        let selectionTxt = editor.getModel().getValueInRange(editor.getSelection());
+                        window.eval(selectionTxt);
+                    }
+                },
+                {
+                    name: "切换主题", group: "yh-util", call: () => {
+                        editor.updateOptions({theme: themeIsDark ? "vs" : "vs-dark"});
+                        themeIsDark = !themeIsDark;
+                    }
+                }, {
+                    name: "保存文件", group: "yh-file", keys: [monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_S], call: () => {
+                        app.update();
+                    },
+                },
+                {
+                    name: "重新加载文件", group: "yh-file", call: () => {
+                        app.loadFile(true);
+                    }
+                },
+                {
+                    name: "清空文件树缓存", group: "yh-file", call: () => {
+                        if (!confirm("确认清空文件树缓存？")) return;
+                        common.initFileTree().then((data) => {
+                            app.initFileList(data);
+                            app.loadFile();
+                        });
+                    }
+                }
+            ];
+
+            let index = 0;
+            for (let action of actions) {
+                editor.addAction({
+                    id: `yh-editor-${++index}`,
+                    label: action.name,
+                    // ctrl+p触发
+                    // monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_P,
+                    // 按住ctrl 再分别按下 k m 后触发
+                    // monaco.KeyMod.chord(monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_K, monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_M)
+                    keybindings: action.keys ? action.keys : [],
+                    precondition: null,
+                    keybindingContext: null,
+                    contextMenuGroupId: action.group ? action.group : 'yh-editor',
+                    contextMenuOrder: 1.5 + index,
+                    run: action.call
+                });
+            }
+
+        }
+
+        function initEditor() {
+            require(['vs/editor/editor.main'], function () {
+                editor = monaco.editor.create(document.getElementById('container'), {
+                    value: '',
+                    language: "markdown",
+                    theme: "vs-dark",
+                    automaticLayout: true
+                });
+                actionInit();
+            });
         }
     });
-
-    function actionInit() {
-
-        let actions = [
-            {
-                name: "在iframe中预览",
-                keys: [monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_P],
-                group: "yh-util",
-                call: () => {
-                    let value = editor.getValue();
-                    app.renderFileContent = value;
-                    app.showIframe = true;
-                },
-            },
-            {
-                name: "js eval", group: "yh-util", call: () => {
-                    let selectionTxt = editor.getModel().getValueInRange(editor.getSelection());
-                    window.eval(selectionTxt);
-                }
-            },
-            {
-                name: "切换主题", group: "yh-util", call: () => {
-                    editor.updateOptions({theme: themeIsDark ? "vs" : "vs-dark"});
-                    themeIsDark = !themeIsDark;
-                }
-            }, {
-                name: "保存文件", group: "yh-file", keys: [monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_S], call: () => {
-                    app.update();
-                },
-            },
-            {
-                name: "重新加载文件", group: "yh-file", call: () => {
-                    app.loadFile(true);
-                }
-            },
-            {
-                name: "清空文件树缓存", group: "yh-file", call: () => {
-                    if (!confirm("确认清空文件树缓存？")) return;
-                    common.initFileTree().then((data) => {
-                        app.initFileList(data);
-                        app.loadFile();
-                    });
-                }
-            }
-        ];
-
-        let index = 0;
-        for (let action of actions) {
-            editor.addAction({
-                id: `yh-editor-${++index}`,
-                label: action.name,
-                // ctrl+p触发
-                // monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_P,
-                // 按住ctrl 再分别按下 k m 后触发
-                // monaco.KeyMod.chord(monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_K, monaco.KeyMod.CtrlCmd | monaco.KeyCode.KEY_M)
-                keybindings: action.keys ? action.keys : [],
-                precondition: null,
-                keybindingContext: null,
-                contextMenuGroupId: action.group ? action.group : 'yh-editor',
-                contextMenuOrder: 1.5 + index,
-                run: action.call
-            });
-        }
-
-    }
-
-    function initEditor() {
-        require(['vs/editor/editor.main'], function () {
-            editor = monaco.editor.create(document.getElementById('container'), {
-                value: '',
-                language: "markdown",
-                theme: "vs-dark",
-                automaticLayout: true
-            });
-            actionInit();
-        });
-    }
 
 </script>
 </body>
