--- a/pages/mdEditor.html
+++ b/pages/mdEditor.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/jpeg" sizes="80x80" href="../imgs/logo.jpg"/>
     <title>Markdown编辑器</title>
 </head>
@@ -10,28 +9,7 @@
 
 <div id="root">
 
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="align-items-center">
-            <a class="navbar-brand" href="#">
-                Markdown编辑器
-            </a>
-        </div>
-        <div class="form-inline">
-            <div class="btn-group dropleft">
-                <button type="button" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true"
-                        aria-expanded="false">
-                    文件操作
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#" @click.prevent="update">更新文件</a>
-                    <a class="dropdown-item" href="#" @click.prevent="syncFile">同步文件</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#" @click.prevent="syncFileTree">初始化文件树</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <yanhui-header title="Markdown编辑器"></yanhui-header>
 
     <div class="m-3">
 
@@ -58,6 +36,9 @@
             <div>
                 <span class="text-info">😀 Ctrl+S 保存文件喔~~</span>
             </div>
+            <button type="button" class="btn btn-outline-info" @click="update">Update</button>
+            <button type="button" class="btn btn-outline-info" @click="syncFile">SyncFile</button>
+            <button type="button" class="btn btn-outline-info" @click="syncFileTree">SyncFileTree</button>
             <div>
                 <span v-if="selectedFile === ''" class="text-danger">未选择文件</span>
                 <span v-else>
@@ -70,89 +51,92 @@
     </div>
 </div>
 
-<script src="../cdn/vue/vue.min.js"></script>
-<script src="../cdn/axios.min.js"></script>
-<script src="../cdn/bootstrap/jquery.slim.min.js"></script>
-<script src="../cdn/bootstrap/bootstrap.min.js"></script>
-<script src="../cdn/editormd/editormd.min.js"></script>
-<script src="../cdn/common.js"></script>
-<link rel="stylesheet" href="../cdn/editormd/css/editormd.css"/>
-<link rel="stylesheet" href="../cdn/bootstrap/bootstrap.min.css"/>
+
+<script src="/cdn/common.js"></script>
+
 <script>
 
-    let tip = common.tip;
-
-    let app = new Vue({
-        el: "#root",
-        data() {
-            return {
-                selectedFile: "test/test.md",
-                fileList: [],
-                editor: null
-            }
-        },
-        methods: {
-            initFileList() {
-                for (let key in common.fileTree) {
-                    if (key && key.endsWith(".md")) {
-                        this.fileList.push(key);
+    initApp({
+        baseLibs: ["/cdn/editormd/editormd.min.js"],
+        asyncLibs: ["/cdn/editormd/css/editormd.css"],
+    }).then(() => {
+        let tip = common.tip;
+        let app = new Vue({
+            el: "#root",
+            data() {
+                return {
+                    selectedFile: "test/test.md",
+                    fileList: [],
+                    editor: null
+                }
+            },
+            methods: {
+                initFileList() {
+                    for (let key in common.fileTree) {
+                        if (key && key.endsWith(".md")) {
+                            this.fileList.push(key);
+                        }
                     }
-                }
-            },
-            loadFile(sync = false) {
-                common.getContent(this.selectedFile, sync).then(data => {
-                    this.editor.setValue(data);
-                    if (sync) tip("文件加载完成!", `已重新加载文件 => ${this.selectedFile}`);
-                });
-            },
-            update() {
-                if (this.selectedFile === "") {
-                    tip("请选选择文件！");
-                    return;
-                }
-                let value = this.editor.getValue();
-                common.updateFile(this.selectedFile, value);
-            },
-            syncFile() {
-                if (this.selectedFile === "") {
-                    tip("请选选择文件！");
-                    return;
-                }
-                this.loadFile(true);
-            },
-            syncFileTree() {
-                confirm("确认同步文件树？") && common.initFileTree().then(() => {
-                    tip("同步文件树完成！");
-                    this.fileList = [];
-                    this.initFileList();
-                });
-            },
-            listenEvent() {
-                $(window).keydown(function (event) {
-                    if (event.keyCode === 83 && event.ctrlKey) {
-                        app.update();
-                        event.preventDefault();
-                    }
-                });
-            }
-        },
-        mounted() {
-            this.initFileList();
-            this.editor = editormd("test-editor", {
-                mode: "gfm",
-                width: "98%",
-                autoHeight: true,
-                path: "../cdn/editormd/lib/",
-                watch: true,
-                onload: () => {
-                    this.loadFile();
                 },
-            });
-            this.listenEvent();
-        }
-    });
-
-    console.log(app);
+                loadFile(sync = false) {
+                    common.getContent(this.selectedFile, sync).then(data => {
+                        this.editor.setValue(data);
+                        if (sync) tip("文件加载完成!", `已重新加载文件 => ${this.selectedFile}`);
+                    });
+                },
+                update() {
+                    if (this.selectedFile === "") {
+                        tip("请选选择文件！");
+                        return;
+                    }
+                    let value = this.editor.getValue();
+                    common.updateFile(this.selectedFile, value);
+                },
+                syncFile() {
+                    if (this.selectedFile === "") {
+                        tip("请选选择文件！");
+                        return;
+                    }
+                    this.loadFile(true);
+                },
+                syncFileTree() {
+                    confirm("确认同步文件树？") && common.initFileTree().then(() => {
+                        tip("同步文件树完成！");
+                        this.fileList = [];
+                        this.initFileList();
+                    });
+                },
+                listenEvent() {
+                    $(window).keydown(function (event) {
+                        if (event.keyCode === 83 && event.ctrlKey) {
+                            app.update();
+                            event.preventDefault();
+                        }
+                    });
+                }
+            },
+            mounted() {
+                this.initFileList();
+                this.editor = editormd("test-editor", {
+                    mode: "gfm",
+                    width: "98%",
+                    height: "calc(100vh - 230px)",
+                    path: "../cdn/editormd/lib/",
+                    watch: true,
+                    tocm: true,
+                    taskList: true,
+                    emoji: true,
+                    tex: true,
+                    flowChart: true,
+                    sequenceDiagram: true,
+                    onload: () => {
+                        this.loadFile();
+                    },
+                });
+                this.listenEvent();
+            }
+        });
+    })
 
 </script>
 </body>
